# PaiHub

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml  update.sh
alembic/: env.py
alembic/versions/: 2d34d7973dd9_add_name_map_config.py  4786d6615575_initial_baseline_migration.py  8c8daabd8fbb_add_autopushconfig_table.py  8e22df58cff8_add_run_once_field_to_auto_push_config.py  c1f3d2a6b4e5_add_review_author_rule_table.py
birdnet/: errors.py
birdnet/client/: base.py
birdnet/client/web/: authorization.py  client.py  error.py  features.py  headers.py  tweet.py  variables.py
birdnet/utils/: types.py
config/: pixiv.toml.example  search.toml.example  twitter.toml.example
core/services/artwork/: models.py
core/services/broadcast/: models.py
core/services/review/: models.py
metadata/: name_map.json
metadata/name_map/: genshin.json
paihub/: __main__.py  application.py  base.py  config.py  entities.py  error.py  factory.py  models.py
paihub/bot/: adminhandler.py  utils.py
paihub/bot/handlers/: adminhandler.py
paihub/command/: auto_push_config.py  chat_member.py  error_handler.py  name_map.py  push.py  reset.py  review.py  review_rule.py  search.py  send.py  set.py  set_commands.py  start.py  update.py  url.py  work.py
paihub/dependence/: database.py  mongodb.py  redis.py
paihub/entities/: artwork.py  author.py  config.py
paihub/jobs/: auto_push.py
paihub/log/: __init__.py  logger.py
paihub/services/artwork/: models.py
paihub/services/broadcast/: models.py
paihub/services/review/: models.py
paihub/services/sites/: models.py
paihub/sites/danbooru/: api.py  cache.py  entities.py  services.py  utils.py
paihub/sites/pixiv/: api.py  cache.py  entities.py  repositories.py  services.py  utils.py
paihub/sites/twitter/: api.py  cache.py  entities.py  services.py  utils.py
paihub/spider/pixiv/: document.py  spider.py
paihub/sqlmodel/: session.py
paihub/system/artwork/: entities.py
paihub/system/name_map/: entities.py  error.py  factory.py  repository.py  service.py  utils.py  watch.py
paihub/system/push/: auto_push_entities.py  auto_push_repositories.py  cache.py  entities.py  ext.py  repositories.py  services.py
paihub/system/review/: cache.py  entities.py  ext.py  repositories.py  services.py
paihub/system/sites/: entities.py  manager.py  repositories.py
paihub/system/user/: cache.py  entities.py  repositories.py  services.py
paihub/system/work/: entities.py  error.py  repositories.py  services.py
paihub/utils/: aioredis.py  execute.py  functools.py  name_map.py  sql_types.py
persica/: __init__.py
pixnet/: errors.py
pixnet/client/: base.py  web.py
pixnet/client/components/web/: illust.py  user.py
sql/: paihub.sql
test/dev/: config.py  main.py
tests/: test_name_map.py
