[project]
name = "paihub"
version = "0.1.0"
description = "PaiHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.4",
    "async-pixiv",
    "asyncmy>=0.2.9",
    "httpx>=0.27.2",
    "motor>=3.5.1",
    "orjson>=3.10.7",
    "picimagesearch",
    "pybooru>=4.2.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot[ext,rate-limiter]>=21.5",
    "redis>=5.0.8",
    "rich>=13.8.0",
    "sqlmodel>=0.0.22",
    "toml>=0.10.2",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py312']

[tool.uv.sources]
picimagesearch = { git = "https://github.com/kitUIN/PicImageSearch" }
async-pixiv = { git = "https://github.com/ArkoClub/async-pixiv", rev = "v1" }
