[project]
name = "paihub"
version = "0.1.0"
description = "PaiHub"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.4",
    "async-pixiv",
    "asyncmy>=0.2.9",
    "httpx>=0.27.2",
    "motor>=3.5.1",
    "orjson>=3.10.7",
    "picimagesearch",
    "pybooru>=4.2.2",
    "pydantic-settings>=2.4.0",
    "python-dotenv>=1.0.1",
    "python-telegram-bot[ext,rate-limiter]>=21.5",
    "redis>=5.0.8",
    "rich>=13.8.0",
    "sqlmodel>=0.0.22",
    "toml>=0.10.2",
]

[project.optional-dependencies]
uvloop = [
    "uvloop>=0.20.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.black]
include = '\.pyi?$'
line-length = 120
target-version = ['py312']

[tool.uv]
dev-dependencies = [
    "black>=24.8.0",
    "ruff>=0.6.4",
]

[tool.uv.sources]
picimagesearch = { git = "https://github.com/kitUIN/PicImageSearch" }
async-pixiv = { git = "https://github.com/ArkoClub/async-pixiv", rev = "v1" }

[tool.ruff]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]
line-length = 120

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
]
ignore = [
    "E501",  # line too long, handled by black
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
    "W191", # indentation contains tabs
]